[PE] Fix paint offset of floating object under display:-webkit-box

The IsLayoutBlock() condition is now consistent with the floating object
locationing logic (which is based on its containing block), and the
condition covers display:-webkit-box.

No new test for the deprecated feature -webkit-box.

Bug: 888534
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Iafb4fe1f61b007209f7be8963686996b5a50dbf7
Reviewed-on: https://chromium-review.googlesource.com/1240742
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593718}
Former-commit-id: 22fb320e982b11fa75e4fe162a5261c56715d873